# powerpc-ironic-hardware-manager

./: README.rst  setup.cfg  setup.py
powerpc_hardware_manager/: powerpc_device.py
tools/: openBmcMemoryQuery.py  openBmcTool.py
