[metadata]
name = powerpc-hardware-manager
author = Mark Hamzy
author-email = hamzy@us.ibm.com
summary = IPA PowerPC Hardware Manager
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python

[files]
packages =
    powerpc_hardware_manager

[entry_points]
ironic_python_agent.hardware_managers =
    powerpc_device = powerpc_hardware_manager.powerpc_device:PowerPCHardwareManager
